# fastapi-boilerplate

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  openapi.json  pyproject.toml  requirements.dev.txt  requirements.txt
.github/workflows/: ci.yml
app/: __init__.py  main.py
app/api/: __init__.py  docs.py  main.py
app/api/routes/: __init__.py  health.py
app/core/: config.py  security.py
app/middleware/: logger.py  process_time.py
app/schemas/: __init__.py  health.py
app/tests/: conftest.py  order.py
app/tests/api/routes/: test_health.py
app/utils/: __init__.py  error_responses.py  exception_handlers.py  logger.py
scripts/: format.sh
